syntax = "proto3";

package pb;

import "api/proto/common_service.proto";
import "api/proto/google/api/annotations.proto";

option go_package = "api/proto";

message SendOTPRequest {
   string email = 1;
   string phone = 2;
   string action = 3;
}

message LoginRequest {
    string user_name = 1;
    string password = 2;
}

service AuthenticationService {
    rpc SendOTP (SendOTPRequest) returns (Response) {
        option (google.api.http) = {
            post: "/auth/send-otp"
            body: "*"
        };
    }

    rpc LoginUser (LoginRequest) returns (Response) {
        option (google.api.http) = {
            post: "/auth/login"
            body: "*"
        };
    }
}