syntax = "proto3";

package pb;

option go_package = "api/proto";

message ErrorInfo{
  int32 status_code = 1;
  string message = 2;
}
