syntax = "proto3";

package pb;

import "api/proto/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/proto/common_service.proto";

option go_package = "api/proto";

message GetMerchantProfileRequest {
    string user_id = 1;
}

message MerchantResponse  {
	string id = 1;
    optional string profile_image = 2;
    optional string full_name = 3;
    string user_name = 4;
    optional string phone = 5;
    optional string email = 6;
    optional google.protobuf.Timestamp dob = 7;
    optional string gender = 8;
    string user_type = 9;
}

message GetMerchantProfileResponse {
    int32 code = 1;
    bool status = 2;
    string message = 3;
    MerchantResponse data = 4;
}

service MerchantService {
    rpc GetProfile (GetMerchantProfileRequest) returns (GetMerchantProfileResponse) {
        option (google.api.http) = {
            get: "/merchant/profile/{user_id}"
        };
    }
}